fix(css): hide scrollbars on code block axis

--- a/assets/css/components/_syntax.scss
+++ b/assets/css/components/_syntax.scss
@@ -18,6 +18,7 @@ pre.athl {
   code {
     text-wrap: nowrap;
     overflow-inline: auto;
+    overflow-block: hidden;
   }
 
   .cursorline {
